package com.urise.webapp.model;

public enum ContactType {
    EMAIL,
    PHONE,
    SKYPE;
}
