@startuml

class Resume {
   + uuid: String
   + fullName: String
   + contacts: Map<ContactType, String>
   + texts: Map<SectionType, Section>
}

class AbstractSection {}


 class Contact {
         +type: ContactType
         +value: String
           }

enum ContactType {
    EMAIL
    PHONE
    SKYPE
}

class TextSection {
        +type: SectionType
        +items: String
        }

class CompanySection {

   + companies: List<Company>

}

class Company {
    +homePage: String
    +startDate: Date
    +endDate: Date
    +place: String
    +role: String
    +item: String
}

class ListSection {
   +items: List<String>
}



Resume *--> AbstractSection
Resume *--> Contact
Contact *--> ContactType

AbstractSection *--> TextSection
AbstractSection *--> CompanySection
AbstractSection *--> ListSection
CompanySection *--> Company
@enduml